packages/svelte/tests/compiler-errors/samples/empty-classname-binding/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'empty-directive-name',
		message: 'ClassDirective name cannot be empty',
		position: [10, 10]
	}
});
